// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar Renders "Not logged in" correctly 1`] = `
<React.Fragment>
  <Blueprint5.Navbar
    className="NavigationBar primary-navbar primary-navbar bp5-dark"
  >
    <Blueprint5.NavbarGroup
      align="left"
    >
      <Blueprint5.Popover
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint5.Navbar>
            <Blueprint5.NavbarGroup
              align="left"
            />
          </Blueprint5.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link"
          to="/welcome"
        >
          <Blueprint5.NavbarHeading>
            <Blueprint5.Button
              active={true}
              className="app-title"
              icon="symbol-diamond"
              minimal={true}
            >
              Source Academy @ NUS
            </Blueprint5.Button>
          </Blueprint5.NavbarHeading>
        </NavLink>
      </Blueprint5.Popover>
      <DesktopNavLink
        disabled={true}
        icon="music"
        text="Sourcecast"
        to="/courses/undefined/sourcecast"
      />
      <DesktopNavLink
        disabled={true}
        icon="code"
        text="Playground"
        to="/playground"
      />
      <DesktopNavLink
        disabled={true}
        icon="book"
        text="SICP JS"
        to="/sicpjs"
      />
      <DesktopNavLink
        disabled={true}
        icon="mountain"
        text="Achievements"
        to="/courses/undefined/achievements"
      />
      <DesktopNavLink
        disabled={true}
        icon="git-repo"
        text="Stories"
        to="/courses/undefined/stories"
      />
    </Blueprint5.NavbarGroup>
    <Blueprint5.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="heart"
          tagName="span"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint5.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint5.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint5.NavbarGroup>
  </Blueprint5.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar Renders correctly for student with course 1`] = `
<React.Fragment>
  <Blueprint5.Navbar
    className="NavigationBar primary-navbar primary-navbar bp5-dark"
  >
    <Blueprint5.NavbarGroup
      align="left"
    >
      <Blueprint5.Popover
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint5.Navbar>
            <Blueprint5.NavbarGroup
              align="left"
            >
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  Array [
                    "xs",
                    "sm",
                  ]
                }
                icon="flame"
                text="Missions"
                to="/courses/1/missions"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  Array [
                    "xs",
                    "sm",
                  ]
                }
                icon="lightbulb"
                text="Quests"
                to="/courses/1/quests"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  Array [
                    "xs",
                    "sm",
                  ]
                }
                icon="predictive-analysis"
                text="Paths"
                to="/courses/1/paths"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  Array [
                    "xs",
                    "sm",
                  ]
                }
                icon="comparison"
                text="Contests"
                to="/courses/1/contests"
              />
              <DesktopNavLink
                disabled={false}
                hasNotifications={true}
                hiddenInBreakpoints={
                  Array [
                    "xs",
                    "sm",
                  ]
                }
                icon="manual"
                text="Missions"
                to="/courses/1/missions"
              />
            </Blueprint5.NavbarGroup>
          </Blueprint5.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link"
          to="/courses/1"
        >
          <Blueprint5.NavbarHeading>
            <Blueprint5.Button
              active={true}
              className="app-title"
              icon="symbol-diamond"
              minimal={true}
            >
              CS1101S
            </Blueprint5.Button>
          </Blueprint5.NavbarHeading>
        </NavLink>
      </Blueprint5.Popover>
      <DesktopNavLink
        disabled={false}
        icon="music"
        text="Sourcecast"
        to="/courses/1/sourcecast"
      />
      <DesktopNavLink
        disabled={false}
        icon="code"
        text="Playground"
        to="/playground"
      />
      <DesktopNavLink
        disabled={false}
        icon="book"
        text="SICP JS"
        to="/sicpjs"
      />
      <DesktopNavLink
        disabled={false}
        icon="mountain"
        text="Achievements"
        to="/courses/1/achievements"
      />
      <DesktopNavLink
        disabled={true}
        icon="git-repo"
        text="Stories"
        to="/courses/1/stories"
      />
    </Blueprint5.NavbarGroup>
    <Blueprint5.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="heart"
          tagName="span"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint5.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint5.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint5.NavbarGroup>
  </Blueprint5.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={
        <AcademyNavigationBar
          assessmentTypes={
            Array [
              "Missions",
              "Quests",
              "Paths",
              "Contests",
              "Missions",
            ]
          }
        />
      }
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar Renders correctly for student without course 1`] = `
<React.Fragment>
  <Blueprint5.Navbar
    className="NavigationBar primary-navbar primary-navbar bp5-dark"
  >
    <Blueprint5.NavbarGroup
      align="left"
    >
      <Blueprint5.Popover
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint5.Navbar>
            <Blueprint5.NavbarGroup
              align="left"
            />
          </Blueprint5.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link"
          to="/welcome"
        >
          <Blueprint5.NavbarHeading>
            <Blueprint5.Button
              active={true}
              className="app-title"
              icon="symbol-diamond"
              minimal={true}
            >
              Source Academy @ NUS
            </Blueprint5.Button>
          </Blueprint5.NavbarHeading>
        </NavLink>
      </Blueprint5.Popover>
      <DesktopNavLink
        disabled={true}
        icon="music"
        text="Sourcecast"
        to="/courses/undefined/sourcecast"
      />
      <DesktopNavLink
        disabled={true}
        icon="code"
        text="Playground"
        to="/playground"
      />
      <DesktopNavLink
        disabled={false}
        icon="book"
        text="SICP JS"
        to="/sicpjs"
      />
      <DesktopNavLink
        disabled={true}
        icon="mountain"
        text="Achievements"
        to="/courses/undefined/achievements"
      />
      <DesktopNavLink
        disabled={true}
        icon="git-repo"
        text="Stories"
        to="/courses/undefined/stories"
      />
    </Blueprint5.NavbarGroup>
    <Blueprint5.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="heart"
          tagName="span"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint5.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint5.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint5.NavbarGroup>
  </Blueprint5.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;
